# ptspc

./: CMakeLists.txt  FindConcorde.cmake  FindDiscorde.cmake  README.md
instances/A-base-stsp-15/: A-base-a280.tsp  A-base-kroA100.tsp  A-base-pr107.tsp  A-base-rd100.tsp
instances/A-base-stsp-16/: A-base-a280.tsp  A-base-kroA100.tsp  A-base-pr107.tsp  A-base-rd100.tsp
instances/A-base-stsp-17/: A-base-a280.tsp  A-base-kroA100.tsp  A-base-pr107.tsp  A-base-rd100.tsp
instances/A-base-stsp-18/: A-base-a280.tsp  A-base-kroA100.tsp  A-base-pr107.tsp  A-base-rd100.tsp
instances/A-base-stsp-19/: A-base-a280.tsp  A-base-kroA100.tsp  A-base-pr107.tsp  A-base-rd100.tsp
instances/A-base-stsp-20/: A-base-a280.tsp  A-base-kroA100.tsp  A-base-pr107.tsp  A-base-rd100.tsp
instances/B-base-highcost-stsp-15/: B-base-highcost-a280.tsp  B-base-highcost-kroA100.tsp  B-base-highcost-pr107.tsp  B-base-highcost-rd100.tsp
instances/B-base-highcost-stsp-16/: B-base-highcost-a280.tsp  B-base-highcost-kroA100.tsp  B-base-highcost-pr107.tsp  B-base-highcost-rd100.tsp
instances/B-base-highcost-stsp-17/: B-base-highcost-a280.tsp  B-base-highcost-kroA100.tsp  B-base-highcost-pr107.tsp  B-base-highcost-rd100.tsp
instances/B-base-highcost-stsp-18/: B-base-highcost-a280.tsp  B-base-highcost-kroA100.tsp  B-base-highcost-pr107.tsp  B-base-highcost-rd100.tsp
instances/B-base-highcost-stsp-19/: B-base-highcost-a280.tsp  B-base-highcost-kroA100.tsp  B-base-highcost-pr107.tsp  B-base-highcost-rd100.tsp
instances/B-base-highcost-stsp-20/: B-base-highcost-a280.tsp  B-base-highcost-kroA100.tsp  B-base-highcost-pr107.tsp  B-base-highcost-rd100.tsp
instances/C-base-invertprobs-stsp-15/: C-base-invertprobs-a280.tsp  C-base-invertprobs-kroA100.tsp  C-base-invertprobs-pr107.tsp  C-base-invertprobs-rd100.tsp
instances/C-base-invertprobs-stsp-16/: C-base-invertprobs-a280.tsp  C-base-invertprobs-kroA100.tsp  C-base-invertprobs-pr107.tsp  C-base-invertprobs-rd100.tsp
instances/C-base-invertprobs-stsp-17/: C-base-invertprobs-a280.tsp  C-base-invertprobs-kroA100.tsp  C-base-invertprobs-pr107.tsp  C-base-invertprobs-rd100.tsp
instances/C-base-invertprobs-stsp-18/: C-base-invertprobs-a280.tsp  C-base-invertprobs-kroA100.tsp  C-base-invertprobs-pr107.tsp  C-base-invertprobs-rd100.tsp
instances/C-base-invertprobs-stsp-19/: C-base-invertprobs-a280.tsp  C-base-invertprobs-kroA100.tsp  C-base-invertprobs-pr107.tsp  C-base-invertprobs-rd100.tsp
instances/C-base-invertprobs-stsp-20/: C-base-invertprobs-a280.tsp  C-base-invertprobs-kroA100.tsp  C-base-invertprobs-pr107.tsp  C-base-invertprobs-rd100.tsp
instances/D-step-stsp-15/: D-step-a280.tsp  D-step-kroA100.tsp  D-step-pr107.tsp  D-step-rd100.tsp
instances/D-step-stsp-16/: D-step-a280.tsp  D-step-kroA100.tsp  D-step-pr107.tsp  D-step-rd100.tsp
instances/D-step-stsp-17/: D-step-a280.tsp  D-step-kroA100.tsp  D-step-pr107.tsp  D-step-rd100.tsp
instances/D-step-stsp-18/: D-step-a280.tsp  D-step-kroA100.tsp  D-step-pr107.tsp  D-step-rd100.tsp
instances/D-step-stsp-19/: D-step-a280.tsp  D-step-kroA100.tsp  D-step-pr107.tsp  D-step-rd100.tsp
instances/D-step-stsp-20/: D-step-a280.tsp  D-step-kroA100.tsp  D-step-pr107.tsp  D-step-rd100.tsp
instances/E-step-invertprobs-stsp-15/: E-step-invertprobs-a280.tsp  E-step-invertprobs-kroA100.tsp  E-step-invertprobs-pr107.tsp  E-step-invertprobs-rd100.tsp
instances/E-step-invertprobs-stsp-16/: E-step-invertprobs-a280.tsp  E-step-invertprobs-kroA100.tsp  E-step-invertprobs-pr107.tsp  E-step-invertprobs-rd100.tsp
instances/E-step-invertprobs-stsp-17/: E-step-invertprobs-a280.tsp  E-step-invertprobs-kroA100.tsp  E-step-invertprobs-pr107.tsp  E-step-invertprobs-rd100.tsp
src/: accepted_cost_calculator.cpp  accepted_cost_calculator.h  customer_set.h  dataset.h  instance.h  main.cpp  offered_cost_calculator.cpp  offered_cost_calculator.h  params.cpp  params.h  solution.cpp  solution.h  solver.cpp  solver.h  tsp_solver.cpp  tsp_solver.h
(+66 files in other folders)
